[gd_scene load_steps=4 format=2]

[ext_resource path="res://script/shockWave .gd" type="Script" id=1]
[ext_resource path="res://image/x.jpg" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="shockWave " type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_shockWave__body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
